Add invalid applications (#149)
Implement extra status for applications to make rejected and invalid
applications distinct. Even though in both cases this means the
application processing is done but member is not created the reason is
different.

--- a/melon-head/src/App/styles.module.scss
+++ b/melon-head/src/App/styles.module.scss
@@ -10,6 +10,7 @@ $colors-light: (
     color5: #e7ad00,
     color6: #00c49f,
     color7: #FF5C93,
+    color8: #9C9B9B,
 );
 
 @function hexToRGB($hex) {
