--- a/orca/templates/new_application_notice.html
+++ b/orca/templates/new_application_notice.html
@@ -11,7 +11,7 @@
     </p>
 
     <p>
-      V příloze najdeš PDF přihlášku osoby, co žádá o členství.
+      Detail přihlášky je dostupný na <a href="{{ application_detail_url }}">{{ application_detail_url }}</a>
     </p>
 
     <p>
@@ -25,8 +25,13 @@
     </p>
 
     <p>🇬🇧 Hello,<br>
-      you are receiving this email as a member of the committee, because a new membership application has been received for the Trade Union of Workers in ICT.</p>
-    <p>In the attachment you will find a PDF application from the person applying for membership.</p>
+      you are receiving this email as a member of the committee, because a new membership application has been received for the Trade Union of Workers in ICT.
+    </p>
+
+    <p>
+      Detail of application is available at <a href="{{ application_detail_url }}">{{ application_detail_url }}</a>
+    </p>
+
     <p>What needs to be done now:
       <ul>
         <li>Check the generated application to ensure that no information is missing.</li>
