Orca: Implement API for creating keycloak user for new member (#160)
Implement API endpoint that creates keycloak user for member. This turns
"new member" into "current member". Api endpoint requires admin
permission to keycloak realm (manage-users). It work roughly as
following

- perform permission checks
- perform member status checks (can't be past member or already have oid
sub)
- lookup member by id in db to gather data necessary for creating user
in keycloak
- issue request to kecyloak admin API passing JWT token of user through
- decode `uuid` from response `Location` header
- update member with sub uuid

Otherwise this includes other refactoring and implementation for support
of admin permissions for keycloak to make this implementation possible.

--- a/melon-head/src/App/Profile/styles.module.scss
+++ b/melon-head/src/App/Profile/styles.module.scss
@@ -114,6 +114,12 @@ li.nav-divider {
     justify-content: center;
 }
 
+.realm-roles {
+    display: flex;
+    gap: 6px;
+    flex-wrap: wrap;
+}
+
 .roles {
     display: flex;
     gap: 6px;
