--- a/melon-head/src/Widgets/DataTable/styles.module.scss
+++ b/melon-head/src/Widgets/DataTable/styles.module.scss
@@ -70,6 +70,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     font-size: 16px;
     letter-spacing: 0.4px;
     flex-direction: column;
