Add ability to (just) view member detail (#172)
I recently learned that this feature would be useful.

This defines handling for a new role which allows user to access details
of members (by known uuid) without giving them ability to list or
manipulate members in any other way.

--- a/melon-head/src/App/ErrorPage/styles.module.scss
+++ b/melon-head/src/App/ErrorPage/styles.module.scss
@@ -26,9 +26,12 @@
 }
 
 .code {
+    display: block;
     background: var(--emphasis-dark-overlay);
     padding: 0 2px;
     font-family: monospace;
     font-style: normal;
     border-radius: 2px;
+    padding: 6px 12px;
+    line-height: 1.2em;
 }
