--- a/melon-head/src/App/MemberDetail/styles.module.scss
+++ b/melon-head/src/App/MemberDetail/styles.module.scss
@@ -23,12 +23,25 @@
     overflow: hidden;
 }
 
-.status {
+.header-row {
     display: flex;
     align-items: center;
     gap: 6px;
     font-weight: 600;
     font-size: 16px;
+
+    dd {
+        margin-left: 0;
+        margin-right: 12px;
+
+        & select {
+            background: #d7eff2;
+            border: 1px solid #30849b;
+            color: #0d3945;
+            height: 20px;
+            border-radius: 9px;
+        }
+    }
 }
 
 .occupations {
